--- a/speed/src/index.html
+++ b/speed/src/index.html
@@ -5,10 +5,17 @@
   <title>Speed</title>
   <base href="/">
 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <h1>Space PWA</h1>
+    <h2>Cargando&hellip;</h2>
+  </app-root>
+  <noscript><h2>Sin javascript no hay PWA que valga!</h2></noscript>
 </body>
 </html>
